--- a/Makefile.toml
+++ b/Makefile.toml
@@ -22,6 +22,9 @@ if eq ${os} windows
   set_env BUILD_TRIPLET "x86_64-pc-windows-msvc"
   set_env PYO3_CONFIG_FILE "${WORKSPACE}\\standalone-py\\pyo3_config.txt"
   set_env CONSOLE_PYO3_CONFIG_FILE "${WORKSPACE}\\standalone-py\\pyo3_config.txt"
+  lib = get_env LIB
+  set_env LIB "${lib};${WORKSPACE}\\py39-dist\\libs"
+  set_env QMAKE_PATH "D:/Qt/5.15.2/msvc2019_64/bin/qmake.exe"
 elseif eq ${os} linux
   set_env STANDALONE_PY_URL "${SWFT_PY_BASE_URL}/cpython-3.9.10-x86_64-unknown-linux-gnu-pgo+lto-20220203T2103.tar.zst"
   set_env PYTHON "${WORKSPACE}/py39/bin/python3"
@@ -42,6 +45,7 @@ elseif eq ${os} linux
   output = exec --fail-on-error gcc -dumpmachine
   triplet = trim ${output.stdout}
   set_env BUILD_TRIPLET ${triplet}
+  set_env QMAKE_PATH "${HOME}/Qt/5.15.2/gcc_64/bin/qmake"
 else
   set_env STANDALONE_PY_URL "${PY_BASE_URL}/cpython-3.9.7-x86_64-apple-darwin-pgo+lto-20211017T1616.tar.zst"
   set_env PYTHON "${WORKSPACE}/py39/bin/python3"
@@ -62,6 +66,8 @@ else
   output = exec --fail-on-error gcc -dumpmachine
   triplet = trim ${output.stdout}
   set_env BUILD_TRIPLET ${triplet}
+  # Below needs to be specified for macOS - I'm not sure where it is installed on macOS
+  set_env QMAKE_PATH "${HOME}/Qt/5.15.2/<compiler_arch>/bin/qmake"
 end
 ''',
 ]
@@ -473,8 +479,13 @@ script = '''
 dependencies = ["build-install-pyside"]
 script_runner = "@duckscript"
 script = '''
-exec --fail-on-error ${PYTHON} -m pip install setuptools wheel packaging
-exec --fail-on-error ${PYTHON} ${WORKSPACE}/pyside-setup/setup.py install --skip-build --debug --qt 5.15.2 --qmake=${qmake_path} --parallel=${PARALLEL_BUILDS} --standalone --no-examples --skip-docs --module-subset  Core,Network,Gui,Qml,Widgets,Charts
+exec --fail-on-error ${DIST_PYTHON} -m pip install setuptools wheel packaging
+exec --fail-on-error ${DIST_PYTHON} ${WORKSPACE}/pyside-setup/setup.py install --skip-build --debug --qt 5.15.2 --qmake=${QMAKE_PATH} --parallel=${PARALLEL_BUILDS} --standalone --no-examples --skip-docs --module-subset  Core,Network,Gui,Qml,Widgets,Charts
+# Provide Qt debug symbols for Linux. This could be refined for other OSes.
+os = os_family
+if eq ${os} linux
+  exec --fail-on-error ln -s -t ${WORKSPACE}/py39-dist/lib/python3.9/site-packages/PySide2/Qt/lib/ ${HOME}/Qt/5.15.2/gcc_64/lib/*.debug
+end
 '''
 
 [tasks.build-install-pyside]
@@ -488,20 +499,12 @@ script = '''
 # Enter-VsDevShell -VsInstanceId fdbeecbc -SkipAutomaticLocation -DevCmdArguments '-arch=x64 -no_logo'
 # You may also need to add `jom` to the path to allow parallel builds to work. You can find this installed
 # in a standard Qt installation in the Qt\Tools\QtCreator\bin\jom directory.
+exec --fail-on-error ${PYTHON} -m pip install setuptools wheel packaging
+exec --fail-on-error ${PYTHON} ${WORKSPACE}/pyside-setup/setup.py install --debug --qt 5.15.2 --qmake=${QMAKE_PATH} --parallel=${PARALLEL_BUILDS} --standalone --no-examples --skip-docs --module-subset  Core,Network,Gui,Qml,Widgets,Charts
+# Provide Qt debug symbols for Linux. This could be refined for other OSes.
 os = os_family
-if eq ${os} windows
-  lib = get_env LIB
-  set_env LIB "${lib};${WORKSPACE}\\py39-dist\\libs"
-  qmake_path = set "D:/Qt/5.15.2/msvc2019_64/bin/qmake.exe"
-elseif eq ${os} linux
-  qmake_path = set "${HOME}/Qt/5.15.2/gcc_64/bin/qmake"
-else
-  qmake_path = set "${HOME}/Qt/5.15.2/<compiler_arch>/bin/qmake"
-end
-exec --fail-on-error ${DIST_PYTHON} -m pip install setuptools wheel packaging
-exec --fail-on-error ${DIST_PYTHON} ${WORKSPACE}/pyside-setup/setup.py install --debug --qt 5.15.2 --qmake=${qmake_path} --parallel=${PARALLEL_BUILDS} --standalone --no-examples --skip-docs --module-subset  Core,Network,Gui,Qml,Widgets,Charts
 if eq ${os} linux
-  exec --fail-on-error ln -s -t ${WORKSPACE}/py39-dist/lib/python3.9/site-packages/PySide2/Qt/lib/ ${HOME}/Qt/5.15.2/gcc_64/lib/*.debug
+  exec --fail-on-error ln -s -t ${WORKSPACE}/py39/lib/python3.9/site-packages/PySide2/Qt/lib/ ${HOME}/Qt/5.15.2/gcc_64/lib/*.debug
 end
 '''
 
