--- a/Makefile.toml
+++ b/Makefile.toml
@@ -2,21 +2,28 @@ env_scripts = [
   '''
 #!@duckscript
 set_env PARALLEL_BUILDS 2
+if not eq "${QTDIR}" ''
+   echo "Using user-defined QTDIR ${QTDIR} to find Qt's debug libs and headers for pyside2 build."
+end
+
 # set os specific env vars
 os = os_family
 if eq ${os} windows
+  if eq "${QTDIR}" ''
+    set_env QTDIR "C:/Qt/5.15.2/msvc2019_64"
+  end
   set_env STANDALONE_PY_URL "${PY_BASE_URL}/cpython-3.9.7-x86_64-pc-windows-msvc-shared-pgo-20211017T1616.tar.zst"
   set_env PYTHON "${WORKSPACE}\\py39\\python.exe"
   set_env DIST_PYTHON "${WORKSPACE}\\py39-dist\\python"
   set_env DIST_PYSIDE2_RCC "${WORKSPACE}\\py39-dist\\Lib\\site-packages\\PySide2\\rcc.exe"
   dist_pyside2_rcc = get_env DIST_PYSIDE2_RCC
   if not is_path_exists ${dist_pyside2_rcc}
-    set_env DIST_PYSIDE2_RCC "C:/Qt/5.15.2/msvc2019_64/bin/rcc.exe"
+    set_env DIST_PYSIDE2_RCC "${QTDIR}/bin/rcc.exe"
   end
   set_env PYSIDE2_RCC "${WORKSPACE}\\py39\\Lib\\site-packages\\PySide2\\rcc.exe"
   pyside2_rcc = get_env PYSIDE2_RCC
   if not is_path_exists ${pyside2_rcc}
-    set_env PYSIDE2_RCC "C:/Qt/5.15.2/msvc2019_64/bin/rcc.exe"
+    set_env PYSIDE2_RCC "${QTDIR}/bin/rcc.exe"
   end
   set_env BACKEND_WHEEL console_backend-0.1.0-cp39-cp39-win_amd64.whl
   set_env BUILD_TRIPLET "x86_64-pc-windows-msvc"
@@ -24,20 +31,23 @@ if eq ${os} windows
   set_env CONSOLE_PYO3_CONFIG_FILE "${WORKSPACE}\\standalone-py\\pyo3_config.txt"
   lib = get_env LIB
   set_env LIB "${lib};${WORKSPACE}\\py39-dist\\libs"
-  set_env QMAKE_PATH "D:/Qt/5.15.2/msvc2019_64/bin/qmake.exe"
+  set_env QMAKE_PATH "${QTDIR}/bin/qmake.exe"
 elseif eq ${os} linux
+  if eq "${QTDIR}" ''
+    set_env QTDIR "${HOME}/Qt/5.15.2/gcc_64"
+  end
   set_env STANDALONE_PY_URL "${SWFT_PY_BASE_URL}/cpython-3.9.10-x86_64-unknown-linux-gnu-pgo+lto-20220203T2103.tar.zst"
   set_env PYTHON "${WORKSPACE}/py39/bin/python3"
   set_env DIST_PYTHON "${WORKSPACE}/py39-dist/bin/python3"
   set_env DIST_PYSIDE2_RCC "${WORKSPACE}/py39-dist/bin/pyside2-rcc"
   dist_pyside2_rcc = get_env DIST_PYSIDE2_RCC
   if not is_path_exists ${dist_pyside2_rcc}
-    set_env DIST_PYSIDE2_RCC "${HOME}/Qt/5.15.2/gcc_64/bin/rcc"
+    set_env DIST_PYSIDE2_RCC "${QTDIR}/bin/rcc"
   end
   set_env PYSIDE2_RCC "${WORKSPACE}/py39/bin/pyside2-rcc"
   pyside2_rcc = get_env PYSIDE2_RCC
   if not is_path_exists ${pyside2_rcc}
-    set_env PYSIDE2_RCC "${HOME}/Qt/5.15.2/gcc_64/bin/rcc"
+    set_env PYSIDE2_RCC "${QTDIR}/bin/rcc"
   end
   set_env BACKEND_WHEEL console_backend-0.1.0-cp39-cp39-linux_x86_64.whl
   set_env PYO3_CONFIG_FILE "${WORKSPACE}/standalone-py/pyo3_config.txt"
@@ -45,20 +55,24 @@ elseif eq ${os} linux
   output = exec --fail-on-error gcc -dumpmachine
   triplet = trim ${output.stdout}
   set_env BUILD_TRIPLET ${triplet}
-  set_env QMAKE_PATH "${HOME}/Qt/5.15.2/gcc_64/bin/qmake"
+  set_env QMAKE_PATH "${QTDIR}/bin/qmake"
 else
+  if eq "${QTDIR}" ''
+    set_env QTDIR "${HOME}/Qt/5.15.2/clang_64"
+  end
   set_env STANDALONE_PY_URL "${PY_BASE_URL}/cpython-3.9.7-x86_64-apple-darwin-pgo+lto-20211017T1616.tar.zst"
   set_env PYTHON "${WORKSPACE}/py39/bin/python3"
   set_env DIST_PYTHON "${WORKSPACE}/py39-dist/bin/python3"
   set_env DIST_PYSIDE2_RCC "${WORKSPACE}/py39-dist/bin/pyside2-rcc"
   dist_pyside2_rcc = get_env DIST_PYSIDE2_RCC
   if not is_path_exists ${dist_pyside2_rcc}
-    set_env DIST_PYSIDE2_RCC "${HOME}/Qt/5.15.2/<compiler_arch>/bin/rcc"
+    set_env DIST_PYSIDE2_RCC "${QTDIR}/bin/rcc"
+    # /Volumes/G-DRIVE_mobile_USB-C/Qt/5.15.2/clang_64
   end
   set_env PYSIDE2_RCC "${WORKSPACE}/py39/bin/pyside2-rcc"
   pyside2_rcc = get_env PYSIDE2_RCC
   if not is_path_exists ${pyside2_rcc}
-    set_env PYSIDE2_RCC "${HOME}/Qt/5.15.2/<compiler_arch>/bin/rcc"
+    set_env PYSIDE2_RCC "${QTDIR}/bin/rcc"
   end
   set_env BACKEND_WHEEL console_backend-0.1.0-cp39-cp39-macosx_10_15_x86_64.whl
   set_env PYO3_CONFIG_FILE "${WORKSPACE}/standalone-py/pyo3_config.txt"
@@ -67,7 +81,7 @@ else
   triplet = trim ${output.stdout}
   set_env BUILD_TRIPLET ${triplet}
   # Below needs to be specified for macOS - I'm not sure where it is installed on macOS
-  set_env QMAKE_PATH "${HOME}/Qt/5.15.2/<compiler_arch>/bin/qmake"
+  set_env QMAKE_PATH "${QTDIR}/bin/qmake"
 end
 ''',
 ]
