--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -110,75 +110,75 @@ jobs:
 #        run: |
 #          cargo make backend-benches
 #        if: matrix.os != 'windows-2019'
-#
-#  checks:
-#
-#    name: Code Quality Checks
-#
-#    runs-on: ubuntu-18.04
-#
-#    steps:
-#
-#      - name: Checkout source
-#        uses: actions/checkout@v2
-#        with:
-#          submodules: recursive
-#          ssh-key: ${{ secrets.SSH_KEY }}
-#          ssh-strict: false
-#
-#      - uses: webfactory/ssh-agent@v0.5.0
-#        with:
-#          ssh-private-key: ${{ secrets.SSH_KEY }}
-#
-#      - name: Pull Git LFS objects
-#        run: git lfs pull
-#        env:
-#          GIT_SSH_COMMAND: ssh -o StrictHostKeyChecking=no
-#
-#      - name: Install stable Rust
-#        uses: actions-rs/toolchain@v1
-#        with:
-#          toolchain: stable
-#          override: true
-#          components: rustfmt, clippy
-#
-#      - uses: Swatinem/rust-cache@v1
-#        with:
-#          key: ${{ secrets.CACHE_VERSION }}
-#
-#      - uses: davidB/rust-cargo-make@v1
-#        with:
-#          version: ${{ env.CARGO_MAKE_VERSION }}
-#
-#      - name: Install Dependencies.
-#        run: |
-#          sudo apt-get update && sudo apt-get install -y capnproto libudev-dev
-#
-#      - name: Cache pip
-#        uses: actions/cache@v2
-#        with:
-#          path: ${{ env.PIP_CACHE_DIR }}
-#          key: ${{ runner.os }}-pyproject-toml-${{ secrets.CACHE_VERSION }}-${{ hashFiles('pyproject.toml') }}
-#
-#      - name: Set up python builder
-#        shell: bash
-#        run: |
-#          cargo make setup-builder
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#
-#      - name: Run Checks
-#        run: |
-#          cargo make check-all
-#
-#      - name: Run Tests
-#        uses: nick-invision/retry@v2
-#        with:
-#          timeout_minutes: 5
-#          max_attempts: 3
-#          retry_on: error
-#          command: cargo make tests
-#
+
+  checks:
+
+    name: Code Quality Checks
+
+    runs-on: ubuntu-18.04
+
+    steps:
+
+      - name: Checkout source
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+          ssh-key: ${{ secrets.SSH_KEY }}
+          ssh-strict: false
+
+      - uses: webfactory/ssh-agent@v0.5.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_KEY }}
+
+      - name: Pull Git LFS objects
+        run: git lfs pull
+        env:
+          GIT_SSH_COMMAND: ssh -o StrictHostKeyChecking=no
+
+      - name: Install stable Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+          components: rustfmt, clippy
+
+      - uses: Swatinem/rust-cache@v1
+        with:
+          key: ${{ secrets.CACHE_VERSION }}
+
+      - uses: davidB/rust-cargo-make@v1
+        with:
+          version: ${{ env.CARGO_MAKE_VERSION }}
+
+      - name: Install Dependencies.
+        run: |
+          sudo apt-get update && sudo apt-get install -y capnproto libudev-dev
+
+      - name: Cache pip
+        uses: actions/cache@v2
+        with:
+          path: ${{ env.PIP_CACHE_DIR }}
+          key: ${{ runner.os }}-pyproject-toml-${{ secrets.CACHE_VERSION }}-${{ hashFiles('pyproject.toml') }}
+
+      - name: Set up python builder
+        shell: bash
+        run: |
+          cargo make setup-builder
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Run Checks
+        run: |
+          cargo make check-all
+
+      - name: Run Tests
+        uses: nick-invision/retry@v2
+        with:
+          timeout_minutes: 5
+          max_attempts: 3
+          retry_on: error
+          command: cargo make tests
+
 #  build:
 #
 #    name: Build Binaries
