Test Sign binaries

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -285,10 +285,10 @@ jobs:
           echo "LIBCLANG_PATH=$LIBCLANG_PATH_WIN" >>$GITHUB_ENV
         if: matrix.os.name == 'windows-2019'
 
-      # - name: Build ${{ runner.os }} Binaries.
-      #   shell: bash
-      #   run: |
-      #     cargo make create-dist
+       - name: Build ${{ runner.os }} Binaries.
+         shell: bash
+         run: |
+           cargo make create-dist
 
       # - name: Create ${{ runner.os }} Installers.
       #   shell: bash
@@ -308,7 +308,6 @@ jobs:
 
       - name: Build ${{ runner.os }} swift-files binary.
         run: |
-          cargo make copy-capnp
           cargo build --release --bin swift-files --no-default-features --features env_logger,indicatif
 
       # - name: Build ${{ runner.os }} swift-settings binary.
