--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -674,10 +674,10 @@ jobs:
           cd binaries
           codesign \
             -s "${{ secrets.APPLE_DEVELOPER_ID }}" \
-            -f --timestamp
+            -f --timestamp "swift-files_${{ matrix.os.short_name }}"
           xcrun altool \
             --notarize-app \
-            --file swift-files_${{ matrix.os.name }} \
+            --file swift-files_${{ matrix.os.short_name }} \
             --primary-bundle-id ${{ env.APP_BUNDLE_ID }} \
             --apiKey ${{ secrets.APPLE_KEY_ID }} \
             --apiIssuer ${{ secrets.APPLE_ISSUER_ID }}
